--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --timeout 10000 ",
-    "test-html": "mocha --timeout 10000 --reporter mochawesome"
+    "test-html": "mocha --timeout 10000 --reporter mochawesome",
+    "test-junit": "mocha --timeout 10000 --reporter mocha-junit-reporter"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "chai": "^4.3.6",
     "faker": "^5.5.3",
     "mocha": "^9.2.1",
+    "mocha-junit-reporter": "^2.0.2",
     "mochawesome": "^7.0.1",
     "supertest": "^6.2.2"
   },
